--- a/stores/starbucks.html
+++ b/stores/starbucks.html
@@ -91,7 +91,7 @@
  
         <div class="large-4 small-12 columns">
  
-          <img src="http://placehold.it/500x500&text=Logo">
+          <img src="/images/starbucks/starbucks-logo.gif">
  
           <div class="hide-for-small panel">
             <h3>Starbucks</h3>
@@ -119,7 +119,7 @@
           <div class="row">
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/1000x1000&text=Thumbnail">
+              <img src="/images/starbucks/sb-frap-1.jpg">
  
               <div class="panel">
                 <h5>Item Name</h5>
@@ -128,7 +128,7 @@
             </div>
  
             <div class="large-4 small-6 columns">
-              <img src="http://placehold.it/500x500&text=Thumbnail">
+              <img src="/images/starbucks/sb-frap-2.jpg">
  
               <div class="panel">
                 <h5>Item Name</h5>
