--- a/index-next.html
+++ b/index-next.html
@@ -28,7 +28,7 @@
                             </center>
                             <div id="test-run" class="row">
                                 <center>
-                                    <div class="btn-red">GO FOR A TEST RUN</div>
+                                    <div class="btn-red">ORDER NOW</div>
                                 </center>
                             </div>
                         </div>
@@ -43,19 +43,12 @@
         <div class="row container-light">
             <h1>
                 <center>
-                    WHAT IS NEIGHBORFUDZ
+                    How does it work?
                 </center>
             </h1>
         </div>
         
-        <!-- A? -->
-        <div class="row container-light">
-            <h1>
-                <center>
-                    Something
-                </center>
-            </h1>
-        </div>
+        
         <!-- do not go beyond this line. It makes me sad if you do :( -->
         <script src="js/wow.min.js"></script>       
         <script src="js/vendor/jquery.js"></script>
