--- a/dashboard.html
+++ b/dashboard.html
@@ -78,9 +78,9 @@
             <center>
                 <div class="large-11 hide-for-small">
                     <div id="featured" data-orbit>
-                        <img src="http://placehold.it/1200x500&text=Slide Image 1" alt="slide image">
-                        <img src="http://placehold.it/1200x500&text=Slide Image 2" alt="slide image">
-                        <img src="http://placehold.it/1200x500&text=Slide Image 3" alt="slide image">
+                        <img src="/images/banners/dd-feature.png" alt="slide image">
+                        <img src="/images/banners/dd-feature.png" alt="slide image">
+                        <img src="/images/banners/dd-feature.png" alt="slide image">
                     </div>
                 </div>
             </center>
@@ -94,18 +94,30 @@
             <div class="large-12 columns">
                 <div class="row">
                     <div class="large-4 small-6 columns">
-                        <h4>Upcoming Shows</h4><hr>
-                    <div class="row">
-                    <div class="large-1 column">
-                      <img src="http://placehold.it/50x50&text=[img]">
-                    </div>
+                        <h4>Stores</h4><hr>
+                        <div class="row">
+                            <div class="large-2 column">
+                                <img src="/images/dunkin-donuts/dunkindonuts-logo.png">
+                            </div>
 
-                    <div class="large-9 columns">
-                      <h5><a href="#">Venue Name</a></h5>
-                      <h6 class="subheader show-for-small">Doors at 00:00pm</h6>
-                    </div>
-                  </div><hr>
+                            <div class="large-9 columns">
+                                <h5><a href="/stores/dunkindonuts.html">Dunkin' Donuts</a></h5>
+                                <h6 class="subheader show-for-small">Doors at 00:00pm</h6>
+                        </div>
 
+                        </div><hr>
+                        <div class="row">
+                            <div class="large-2 column">
+                                <img src="/images/dunkin-donuts/dunkindonuts-logo.png">
+                            </div>
+
+                            <div class="large-9 columns">
+                                <h5><a href="/stores/mcdonalds.html">McDonald's</a></h5>
+                                <h6 class="subheader show-for-small">Doors at 00:00pm</h6>
+                        </div>
+
+                        </div><hr>
+                        <!--
                   <div class="hide-for-small">
                     <div class="row">
                       <div class="large-1 column">
@@ -137,6 +149,7 @@
                       </div>
                     </div>
                   </div>
+                        -->
                 </div>
 
 
@@ -144,7 +157,7 @@
 
 
                 <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/300x465&text=Image">
+                  <img src="/images/banners/dd-hori.png">
                 </div>
 
 
@@ -154,26 +167,15 @@
 
                 <div class="large-4 small-12 columns">
 
-                  <h4>Blog</h4><hr>
-                  <div class="panel">
-                    <h5><a href="#">Post Title 1</a></h5>
+                  <h4>Waiting Orders</h4><hr>
+                    <div class="large-6 small-9 columns">
+                        <img src="/images/dunkin-donuts/dd_chococandysprinkles.jpg">
 
-                    <h6 class="subheader">
-                      Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Suspendisse ultrices ornare tempor...
-                    </h6>
-
-                    <h6><a href="#">Read More »</a></h6>
-                  </div>
-
-                  <div class="panel hide-for-small">
-                    <h5><a href="#">Post Title 2 »</a></h5>
-                  </div>
-
-                  <div class="panel hide-for-small">
-                    <h5><a href="#">Post Title 3 »</a></h5>
-                  </div>
-
-                  <a href="#" class="right">Go To Blog »</a>
+                        <div class="panel">
+                        <h5>Choco Sprinkles</h5>
+                        <h6 class="subheader">P20</h6>
+                        </div>
+                    </div>
 
                 </div>
 
