--- a/stores/jollibee.html
+++ b/stores/jollibee.html
@@ -4,9 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />        
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>NeighborFoods</title>
-        <link rel="stylesheet" href="css/alpha.css" type="text/css">    
-        <link rel="stylesheet" href="css/foundation.css" />
-        <link rel="stylesheet" href="css/cheatsheet.css" type="text/css"/>
+        <link rel="stylesheet" href="/css/alpha.css" type="text/css">    
+        <link rel="stylesheet" href="/css/foundation.css" />
+        <link rel="stylesheet" href="/css/cheatsheet.css" type="text/css"/>
         <link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr.js"></script>
     </head>
