--- a/dashboard.html
+++ b/dashboard.html
@@ -91,99 +91,39 @@
             </div>
         </div><br>
         <div class="row">
-            <div class="large-12 columns">
-                <div class="row">
-                    <div class="large-4 small-6 columns">
-                        <h4>Stores</h4><hr>
-                        <div class="row">
-                            <div class="large-2 column">
-                                <img src="/images/dunkin-donuts/dunkindonuts-logo.png">
-                            </div>
-
-                            <div class="large-9 columns">
-                                <h5><a href="/stores/dunkindonuts.html">Dunkin' Donuts</a></h5>
-                                <h6 class="subheader show-for-small">Doors at 00:00pm</h6>
-                        </div>
-
-                        </div><hr>
-                        <div class="row">
-                            <div class="large-2 column">
-                                <img src="/images/dunkin-donuts/dunkindonuts-logo.png">
-                            </div>
-
-                            <div class="large-9 columns">
-                                <h5><a href="/stores/mcdonalds.html">McDonald's</a></h5>
-                                <h6 class="subheader show-for-small">Doors at 00:00pm</h6>
-                        </div>
-
-                        </div><hr>
-                        <!--
-                  <div class="hide-for-small">
-                    <div class="row">
-                      <div class="large-1 column">
-                        <img src="http://placehold.it/50x50&text=[img]">
-                      </div>
-
-                      <div class="large-9 columns">
-                        <h5 class="subheader"><a href="#">Venue Name</a></h5>
-                      </div>
-                    </div><hr>
-
-                    <div class="row">
-                      <div class="large-1 column">
-                        <img src="http://placehold.it/50x50&text=[img]">
-                      </div>
-
-                      <div class="large-9 columns">
-                        <h5 class="subheader"><a href="#">Venue Name</a></h5>
-                      </div>
-                    </div><hr>
-
-                    <div class="row">
-                      <div class="large-1 column">
-                        <img src="http://placehold.it/50x50&text=[img]">
-                      </div>
-
-                      <div class="large-9 columns">
-                        <h5 class="subheader"><a href="#">Venue Name</a></h5>
-                      </div>
+            <div class="large-4 columns">
+                <div class="container-light">
+                    <center>Dunkin' Donuts</center>
+                    <div class="">
+                        Time Limit:<br>
+                        <center>
+                            <div id="countbox1"></div>
+                        </center>
+                        Needed: P80.00                        
                     </div>
-                  </div>
-                        -->
                 </div>
-
-
-
-
-
-                <div class="large-4 small-6 columns">
-                  <img src="/images/banners/dd-hori.png">
-                </div>
-
-
-
-
-
-
-                <div class="large-4 small-12 columns">
-
-                  <h4>Waiting Orders</h4><hr>
-                    <div class="large-6 small-9 columns">
-                        <img src="/images/dunkin-donuts/dd_chococandysprinkles.jpg">
-
-                        <div class="panel">
-                        <h5>Choco Sprinkles</h5>
-                        <h6 class="subheader">P20</h6>
-                        </div>
-                    </div>
-
-                </div>
-
-
-
-              </div>
             </div>
-          </div>
+            <div class="large-4 columns">
+                <div class="container-light">
+                    <center>Starbucks</center>
+                    <div>
+                        Time Limit:<br>
+                        <div id="countbox2"></div>
+                        Needed: P180.00
+                    </div>
+                </div>
+            </div>
+            <div class="large-4 columns">
+                <div class="container-light">
+                    <center>McDonald's</center>
+                    <div>
+                        Time Limit:<br>
+                        <div id="countbox3"></div>
+                        Needed: P60.50
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
@@ -219,7 +159,8 @@
         <!-- do not go beyond this line. It makes me sad if you do :( -->
         <script src="js/wow.min.js"></script>       
         <script src="js/vendor/jquery.js"></script>
-	    <script src="js/foundation.min.js"></script>                 
+	    <script src="js/foundation.min.js"></script>           
+        <script src="/js/countdowntimer.js"></script>
 
         <script>
             new WOW().init();            
@@ -260,5 +201,7 @@
               });
            });       
         </script>   
+                
+
     </body>
 </html>
