--- a/stores/jollibee.html
+++ b/stores/jollibee.html
@@ -25,7 +25,7 @@
                
               <li class="name">
                 <h1>
-                  <a href="#">
+                  <a href="/dashboard.html">
                     NEIGHBORFUDZ
                   </a>
                 </h1>
