--- a/dashboard.html
+++ b/dashboard.html
@@ -93,33 +93,78 @@
         <div class="row">
             <div class="large-4 columns">
                 <div class="container-light">
-                    <center>Dunkin' Donuts</center>
+                    <center><h4>Dunkin' Donuts</h4></center>
                     <div class="">
+                        <hr>
                         Time Limit:<br>
                         <center>
-                            <div id="countbox1"></div>
+                            <h4 class="f-pink">
+                                <div id="countbox1"></div>
+                            </h4>                            
+                        </center><hr>
+                        Needed: <br>
+                        <center>
+                            <h3 class="f-green">
+                                P80.00
+                            </h3>                            
                         </center>
-                        Needed: P80.00                        
+                        <center>
+                            <div class="btn-dash-order">
+                                <a href="/stores/dunkindonuts.html">ORDER NOW</a>
+                            </div>
+                        </center>
                     </div>
                 </div>
             </div>
             <div class="large-4 columns">
                 <div class="container-light">
-                    <center>Starbucks</center>
+                    <center><h4>Starbucks</h4></center>
                     <div>
+                        <hr>
                         Time Limit:<br>
-                        <div id="countbox2"></div>
-                        Needed: P180.00
+                        <center>
+                            <h4 class="f-pink">
+                                <div id="countbox2"></div>
+                            </h4>
+                        </center>
+                        <hr>
+                        Needed: <br>
+                        <center>
+                            <h3 class="f-green">
+                                P180.00
+                            </h3>
+                        </center>
                     </div>
+                    <center>
+                        <div class="btn-dash-order">
+                            <a href="/stores/starbucks.html">ORDER NOW</a>
+                        </div>
+                    </center>
                 </div>
             </div>
             <div class="large-4 columns">
                 <div class="container-light">
-                    <center>McDonald's</center>
+                    <center><h4>McDonald's</h4></center>
                     <div>
+                        <hr>
                         Time Limit:<br>
-                        <div id="countbox3"></div>
-                        Needed: P60.50
+                        <center>
+                            <h4 class="f-pink">
+                                <div id="countbox3"></div>
+                            </h4>
+                        </center>
+                        <hr>
+                        Needed: <br>
+                        <center>
+                            <h3 class="f-green">
+                                P120.00
+                            </h3>
+                        </center>
+                        <center>
+                            <div class="btn-dash-order">
+                                <a href="/stores/mcdonalds.html">ORDER NOW</a>
+                            </div>
+                        </center>
                     </div>
                 </div>
             </div>
