--- a/dashboard.html
+++ b/dashboard.html
@@ -18,9 +18,9 @@
               <nav class="top-bar red-forced" data-topbar>
                 <ul class="title-area">
 
-                  <li class="name">
+                  <li class="name f-white">
                     <h1>
-                      <a href="/dashboard.html">
+                      <a href="/dashboard.html" class="f-white">
                         NEIGHBORFUDZ
                       </a>
                     </h1>
@@ -47,11 +47,11 @@
                             <li><a href="#">Subdropdown Option</a></li>
                           </ul>
                         </li>-->
-                        <li><a href="/stores/mcdonalds.html">McDonalds</a></li>
-                        <li><a href="/stores/jollibee.html">Jollibee</a></li>                        
+                        <li><a href="/stores/mcdonalds.html" class="f-white">McDonalds</a></li>
+                        <li><a href="/stores/jollibee.html" class="f-white">Jollibee</a></li>                        
                         <!--<li><a href="#">Dropdown Option</a></li>-->
                         <li class="divider"></li>                    
-                        <li><a href="#">See all →</a></li>
+                        <li><a href="#" class="f-white">See all →</a></li>
                       </ul>
                     </li>
                     <li class="divider"></li>
@@ -59,8 +59,8 @@
                         <a href="#" class="red-forced">Coffee+Pastries</a>
                         <ul class="dropdown">
                             <li><label>Salcedo Village</label></li>
-                            <li><a href="/stores/dunkindonuts.html">Dunkin' Donuts</a></li>
-                            <li><a href="/stores/starbucks.html">Starbucks</a></li>
+                            <li><a href="/stores/dunkindonuts.html" class="f-white">Dunkin' Donuts</a></li>
+                            <li><a href="/stores/starbucks.html" class="f-white">Starbucks</a></li>
                         </ul>
                     </li>                                
                   </ul>
