--- a/index-next.html
+++ b/index-next.html
@@ -24,17 +24,36 @@
                         <div class="large-3 columns invi">.</div>
                         <div class="large-6 columns">
                             <center>
-                                <img src="images/nf%20logo.png" style="width: 70% !important;">
+                                <img src="images/nf%20logo.png" class="slideDown" style="width: 70% !important;">
                             </center>
                             <div id="test-run" class="row">
                                 <center>
-                                    <div class="btn-red">ORDER NOW</div>
+                                    <div class="btn-red slideUp">ORDER NOW</div>
                                 </center>
                             </div>
                         </div>
                         <div class="large-3 columns invi">.</div>
                     </div>
-                    
+                    <div id="locale" class="row">
+                        <div class="large-2 columns">
+                            <div class="panel-location">One Salcedo</div>
+                        </div>
+                        <div class="large-2 columns">
+                                <div class="panel-location">Two Salcedo</div>
+                        </div>
+                        <div class="large-2 columns">
+                                <div class="panel-location">Three Salcedo</div>
+                        </div>
+                        <div class="large-2 columns">
+                                <div class="panel-location">Regency</div>
+                        </div>
+                        <div class="large-2 columns">
+                                <div class="panel-location">Lafayette</div>
+                        </div>
+                        <div class="large-2 columns">
+                                <div class="panel-location">West Gate</div>
+                        </div>
+                    </div>                        
                 </div>                
             </div>
         </div>
