Updated index concept

--- a/index-next.html
+++ b/index-next.html
@@ -28,7 +28,7 @@
                             </center>
                             <div id="test-run" class="row">
                                 <center>
-                                    <div class="btn-red slideUp">ORDER NOW</div>
+                                    <div class="btn-red slideUp">PICK A LOCATION BELOW</div>
                                 </center>
                             </div>
                         </div>
